--- a/data/config.json
+++ b/data/config.json
@@ -26,37 +26,37 @@
             "name": "Master Bedroom eTRV",
             "type": "MIHO013",
             "device_id": 3627,
-            "enabled": True
+            "enabled": true
         },
         {
             "name": "Second Bedroom eTRV",
             "type": "MIHO013",
             "device_id": 7228,
-            "enabled": True
+            "enabled": true
         },
         {
             "name": "Living Room eTRV",
             "type": "MIHO013",
             "device_id": 6906,
-            "enabled": True
+            "enabled": true
         },
         {
             "name": "Dining Room eTRV",
             "type": "MIHO013",
             "device_id": 3942,
-            "enabled": True
+            "enabled": true
         },
         {
             "name": "Hallway eTRV",
             "type": "MIHO013",
             "device_id": 6969,
-            "enabled": True
+            "enabled": true
         },
         {
             "name": "Bathroom eTRV",
             "type": "MIHO013",
             "device_id": 6898,
-            "enabled": True
+            "enabled": true
         }
     ]
 }
